--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Welcome to My GitHub Page</h1>
     <p>Fourth year mathematics undergraduate at the University of Edinburgh.</p>
-    <p>Interested in machine learning, cognitive science & probabilit theory.</p>
+    <p>Interested in machine learning, cognitive science & probability theory.</p>
 
     <h2>Research</h2>
     <p>Check out my research <a href="research/my-research.pdf">here</a>.</p>
