--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My GitHub Page</title>
+    <subtitle>Main</subtitle>
 </head>
 <body>
     <h1>Welcome to My GitHub Page</h1>
