--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <subtitle>Main</subtitle>
+    <title>Main</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        nav { margin: 10px 0; }
+        nav a {
+            margin-right: 15px;
+            text-decoration: none;
+            color: #007bff;
+        }
+        nav a:hover { text-decoration: underline; }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page</h1>
-    <p>Fourth year mathematics undergraduate at the University of Edinburgh.</p>
-    <p>Interested in machine learning, cognitive science & probability theory.</p>
-
-    <h2>Research</h2>
-    <p>Check out my research <a href="research/my-research.pdf">here</a>.</p>
+    <header>
+        <h1>My GitHub Page</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="research.html">Research</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <section>
+        <p>Fourth year mathematics undergraduate at the University of Edinburgh.</p>
+        <p>Interested in machine learning, cognitive science & probability theory.</p>
+    </section>
 </body>
 </html>
