--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     </header>
     <section>
         <p>Fourth year mathematics undergraduate at the University of Edinburgh.</p>
-        <p>Interested in machine learning, cognitive science & probability theory.</p>
+        <p>Interested in machine learning, probability theory & cognitive science.</p>
     </section>
+
+    <h2>Research</h2>
+    <p>Some notes on explainability: <a href="research/my-research.pdf">here</a>.</p>
 </body>
 </html>
