--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     </section>
 
     <h2>Research</h2>
-    <p>Some notes on explainability: <a href="research/my-research.pdf">here</a>.</p>
+    <p>Some notes from my work on <a href="research/my-research.pdf">explainability</a>.</p>
 </body>
 </html>
