--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     </section>
 
     <h2>Research</h2>
-    <p>Some notes from my work on <a href="research/Explainability,%20Mechanistic%20Interpretability%20&%20Feature%20Geometry.pdf">explainability</a>.</p>
+    <p>Some notes from my work on <a href="research/emifg.pdf">explainability</a>.</p>
 </body>
 </html>
