--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <header>
+        <h1> Redmond Bowcott </h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="research.html">Research</a>
