--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1> Redmond Bowcott </h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="research.html">Research</a>
+            <a href="contact">Contact</a>
         </nav>
     </header>
     <section>
