--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <h1> Redmond Bowcott </h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="contact">Contact</a>
         </nav>
     </header>
     <section>
@@ -28,5 +27,6 @@
 
     <h2>Research</h2>
     <p>Some notes from my work on <a href="research/emifg.pdf">explainability</a>.</p>
+    <p>Corresponding Colab <a href="">here</a></p>
 </body>
 </html>
