--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Main</title>
     <style>
-        body { font-family: Arial, sans-serif; }
+        body { font-family: Aptos, serif; }
         nav { margin: 10px 0; }
         nav a {
             margin-right: 15px;
