--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
     <h2>Research</h2>
     <p>Some notes from my work on <a href="research/emifg.pdf">explainability</a>.</p>
-    <p>Corresponding Colab <a href="https://colab.research.google.com/drive/1EZk7jN8fagL1SPOG9T1BMz3UU8MDPYXe?usp=sharing">here</a></p>
+    <p>Corresponding Colab <a href="https://colab.research.google.com/drive/1EZk7jN8fagL1SPOG9T1BMz3UU8MDPYXe?usp=sharing">here</a>.</p>
 </body>
 </html>
