--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     </section>
 
     <h2>Research</h2>
-    <p>Some notes from my work on <a href="research/emifg.pdf">explainability</a>.</p>
-    <p>Corresponding Colab <a href="https://colab.research.google.com/drive/1EZk7jN8fagL1SPOG9T1BMz3UU8MDPYXe?usp=sharing">here</a>.</p>
+    <p>Some notes from my work on <a href="research/emifg.pdf">explainability</a>. Corresponding <a href="https://colab.research.google.com/drive/1EZk7jN8fagL1SPOG9T1BMz3UU8MDPYXe?usp=sharing">Colab</a>.</p>
 </body>
 </html>
