--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Main</title>
     <style>
-        body { font-family: Aptos, serif; }
+        body { font-family: Helvetica, serif; }
         nav { margin: 10px 0; }
         nav a {
             margin-right: 15px;
@@ -26,6 +26,7 @@
     </section>
 
     <h2>Research</h2>
-    <p>Some notes from my work on <a href="research/emifg.pdf">explainability</a>. Corresponding <a href="https://colab.research.google.com/drive/1EZk7jN8fagL1SPOG9T1BMz3UU8MDPYXe?usp=sharing">Colab</a>.</p>
+    <p>Some notes from my work on <a href="research/emifg.pdf">explainability</a>. </p>
+    <p>    Corresponding Colab <a href="https://colab.research.google.com/drive/1EZk7jN8fagL1SPOG9T1BMz3UU8MDPYXe?usp=sharing">here</a>.</p>
 </body>
 </html>
