--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <section>
         <p>Fourth year mathematics undergraduate at the University of Edinburgh.</p>
-        <p>Interested in machine learning, probability theory & cognitive science.</p>
+        <p>Interested in Machine Learning, Probability Theory & Cognitive Science.</p>
     </section>
 
     <h2>Research</h2>
