--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <section>
-        <p>Fourth year mathematics undergraduate at the University of Edinburgh.</p>
+        <p>Fourth year Mathematics undergraduate at the University of Edinburgh.</p>
         <p>Interested in Machine Learning, Probability Theory & Cognitive Science.</p>
     </section>
 
